# UniversityClasses

./: README.md
CIS212/: README.md
CIS212/Assignment1/: IntegerScanner.java  README.md
CIS212/Assignment2/: ArrayTesting.java  README.md
CIS212/Assignment3/: README.md
CIS212/Assignment4/: MainFrame.java  PaintPanel.java  PaintPoint.java  README.md
CIS212/Assignment5/: README.md  fileReader.java  phonebookEntry.java
CIS212/Assignment6/: Main.java  OccurrenceSet.java  README.md
CIS212/Assignment7/: README.md
CIS212/Assignment8/: README.md
CIS313/: README.md
CIS313/Project0/: Calculator.py  README
CIS313/Project1/: DoubleLinkedList.py  README  queue.py  stack.py
CIS313/Project2/: 2.input  CollageChecker.py  DoubleLinkedList.py  MinHeap.py  README  RestaurantTest.py  WellFormattedBrackets.py  stack.py
CIS313/Project3/: BST.py  PrioritySorting.py  README.md  RollingMedian.py
CIS313/Project4/: BestPath.py  PolishNotation.py  RBT.py  README
CIS313/Project5/: Map.py  RBT.py  lab hints
CIS314/Lab/: assemblytest.c  week3-lab.c  week4  week4-lab.c
CIS314/Project1/: 1-1.c  1-2.c  1-3.c  1-4.c
CIS314/Project2/: 2-1.c  2-2.c  2-3.c  solutions
CIS314/Project3/: 3-1  3-1.c  3-2  3-2.c
CIS314/Project4/: 4-1  4-1.c  4-2  4-2.c  4-3  4-3.c
CIS314/Project5/: 5-1.ys
CIS315/: README.md
CIS330/: README.md
CIS330/3F/: log  (+14 more)
CIS410/project2/: CMakeLists.txt  proj2.cxx
CIS410/project3/: CMakeLists.txt  proj3.cxx
CIS410/project4/: CMakeLists.txt  proj4.cxx
CIS415/: README.md
CIS422/: Install.sh  README.md  Uninstall.sh
CIS461/: build.sh  qcc
(+208 files in other folders)
